<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/monitorSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/main__monitor_switch"
        android:checked="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventStatusText"
        android:layout_below="@+id/monitorSwitch"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="10px"
        android:text="@string/main__eventstatus_initial" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/beaconStatusText"
        android:layout_below="@+id/eventStatusText"
        android:layout_alignParentEnd="true"
        android:text="@string/main__beaconstatus_initial"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
